css/contact.css
/*
CSS used on contact page.
*/




/* CSS for grid */
.contact_grid {
	display: grid;
	grid-template-columns: repeat(4, auto);
	grid-template-rows: repeat(7, auto);
	grid-column-gap: 10px;
	grid-row-gap: 10px;
	background-color: white;
}

/* CSS for grid panel positions */
.contact_one {
	grid-area: 2 / 2 / span 1 / span 1;
}

.contact_two {
	grid-area: 4 / 2 / span 1 / span 1;
}

.contact_three {
	grid-area: 6 / 2 / span 1 / span 1;
}

.link_one {
	grid-area: 2 / 3 / span 1 / span 1;
}

.link_two {
	grid-area: 4 / 3 / span 1 / span 1;
}

.link_three {
	grid-area: 6 / 3 / span 1 / span 1;
}

/* CSS for grid content */
.grid_content {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	font-size: 14pt;
	padding: 10px;
}

.grid_desc {
	display: flex;
	justify-content: flex-start;
	align-items: center;
	font-size: 14pt;
}

